test/bad/b25.erl
-module(b25).

f4(A,B,C) ->  
    case X of
	    A    -> X = "";
	    B    -> X = "";
        C    -> X = ""
    end.